Add functionality for every questions transitions

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,23 @@
 #q1 {
     display: none;
 }
+
+#q2 {
+    display: none;
+}
+
+#q3 {
+    display: none;
+}
+
+#q4 {
+    display: none;
+}
+
+#q5 {
+    display: none;
+}
+
+#results {
+    display: none;
+}
