--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 #q1 {
     display: none;
 }
@@ -20,4 +21,16 @@
 
 #q6 {
     display: none;
+}
+
+.background {
+    background: rgb(84, 46, 113);
+    background: linear-gradient(90deg, rgba(84, 46, 113, 1) 0%, rgba(251, 54, 64, 1) 100%);
+}
+
+h1,
+h2,
+h3 {
+    font-family: 'Rajdhani', sans-serif;
+    color: lightgrey;
 }
