--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ h3 {
     left: 0;
     top: 0;
     background: hsla(0, 0%, 0%, 0.3);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rajdhani', sans-serif;
     color: lightcyan;
 }
 
@@ -69,9 +69,8 @@ h3 {
     left: 0;
     color: lightcyan;
     background: hsla(0, 0%, 0%, 0.1);
-    /* margin: 5%; */
-    font-family: 'Roboto', sans-serif;
-    /* box-sizing: border-box; */
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 20px;
 }
 
 
@@ -83,6 +82,7 @@ h3 {
     color: white;
     padding: 15px 20px;
     text-align: center;
+    font-family: 'Rajdhani', sans-serif;
     display: inline-block;
     font-size: 16px;
 }
